--- a/vignettes/longevityTools_eDRUG.Rmd
+++ b/vignettes/longevityTools_eDRUG.Rmd
@@ -139,7 +139,11 @@ file named
 [cmap_instances_02.txt](http://biocluster.ucr.edu/~tgirke/projects/longevity/cmap/data/cmap_instances_02.txt).
 The following count statisitics are extracted from this file.
 
-The panel of cell lines used by CMAP includes MCF7, ssMCF7, HL60, PC3 and SKMEL5. 
+The panel of cell lines used by CMAP includes [MCF7](http://www.broadinstitute.org/cmap/help_topics_linkified.jsp#mcf7), 
+[ssMCF7](http://www.broadinstitute.org/cmap/help_topics_linkified.jsp#mcf7), 
+[HL60](http://www.broadinstitute.org/cmap/help_topics_linkified.jsp#hl60), 
+[PC3](http://www.broadinstitute.org/cmap/help_topics_linkified.jsp#pc3) and 
+[SKMEL5](http://www.broadinstitute.org/cmap/help_topics_linkified.jsp#skmel5). 
 Each cell type was subjected to the following number of total treatments and number
 of distinct drugs, respectively. The total number of drugs used by CMAP is 1,309.
 
@@ -323,7 +327,7 @@ interval <- table(cut(y, right=FALSE, dig.lab=5,  breaks=c(0, 5, 10, 50, 100, 20
 df <- data.frame(interval); colnames(df) <- c("Bins", "Counts")
 ggplot(df, aes(Bins, Counts)) + 
        geom_bar(position="dodge", stat="identity", fill="cornflowerblue") + 
-       ggtitle("DEG numbers by count bins")
+       ggtitle("DEG numbers by bins")
 ```
 
 <div align="right">[Back to Table of Contents]()</div>
