--- a/vignettes/longevityTools_eQTL.Rmd
+++ b/vignettes/longevityTools_eQTL.Rmd
@@ -175,7 +175,7 @@ write.table(samples1KG_ID,file="data/samples1KG.txt",quote=F,row.names=F,col.nam
 Create region file to use with bcftools for LD.
 ```{r regionsFile, eval=FALSE}
 regions<-data.frame(chr="chr1",pos=0,pos_to=0,stringsAsFactors = F)
-regions$chr[1]<-result$snp_chrom[1]
+regions$chr[1]<-gsub("chr","",result$snp_chrom[1]) #1KG genotype files do not have chr
 regions$pos[1]<-min(result$snp_pos)
 regions$pos_to[1]<-max(result$snp_pos)
 write.table(regions,file="data/regions.txt",quote=F,row.names=F,col.names=F,sep="\t")
@@ -183,21 +183,31 @@ write.table(regions,file="data/regions.txt",quote=F,row.names=F,col.names=F,sep=
 
 
 Filter 1KG genotypes to only include EUR unrelated individuals and eQTL region.
-Using bcftools v.1.2, htslib v1.2.1
-Output compressed BCF2.
+```
+>bcftools --version
+bcftools 1.3
+Using htslib 1.3
+Copyright (C) 2015 Genome Research Ltd.
+License Expat: The MIT/Expat license
+This is free software: you are free to change and redistribute it.
+There is NO WARRANTY, to the extent permitted by law.
 
 ```
-bcftools view -Ob -o results/1KGgeno.bgzf -S data/samples1KG.txt data/ALL.chr22.phase3_shapeit2_mvncall_integrated_v5a.20130502.genotypes.vcf.gz -R data/regions.txt
 
+```
+bcftools view -Ov -o results/1KGgeno.vcf -S data/samples1KG.txt -R data/regions.txt -v snps data/ALL.chr22.phase3_shapeit2_mvncall_integrated_v5a.20130502.genotypes.vcf.gz
+#without -v snps, multiple indels with same rsID were outputted, and plink would not read that in.
+#Quick solution, only include SNPs, not indels.
 ```
 
 Run PLINK clump command using default settings, but might want to change with different nominal significance thresholds.
 
 ```
-plink -bcf results/1KGgeno.bgzf --clump data/eSNP.assoc 
+plink -vcf results/1KGgeno.vcf --clump data/eSNP.assoc 
+
 ```
 
-Output from PLINK clump command will be set of independent eSNPs in the region. 
+PLINK clump command identifies 8 independent eSNPs in the region. 
 
 Next step, extract independent eSNPs from individual level genotype data, build MR risk score, evaluate for association with survival time.
 
