--- a/vignettes/03_longevityTools_Overview/longevityTools.Rmd
+++ b/vignettes/03_longevityTools_Overview/longevityTools.Rmd
@@ -68,7 +68,7 @@ The R software for running [_`longevityTools`_](https://github.com/tgirke/longev
 
 ```{r install, eval=FALSE}
 source("http://bioconductor.org/biocLite.R") # Sources the biocLite.R installation script 
-biocLite("tgirke/longevityTools", build_vignettes=FALSE) # Installs package from GitHub
+biocLite("tgirke/longevityTools", build_vignettes=FALSE, dependencies=FALSE) # Installs package from GitHub
 ```
 <div align="right">[Back to Table of Contents]()</div>
 
@@ -78,6 +78,19 @@ biocLite("tgirke/longevityTools", build_vignettes=FALSE) # Installs package from
 library("longevityTools") # Loads the package
 library(help="longevityTools") # Lists package info
 vignette("longevityTools") # Opens vignette
+```
+
+<div align="right">[Back to Table of Contents]()</div>
+
+## GitHub workflow
+
+```{sh github_usage, eval=FALSE}
+git clone git@github.com:tgirke/longevityTools.git
+cd longevityTools
+git pull # Get updates from remote
+git branch # Check whether you are in the master branch 
+## do some work, commit/push changes to local and remote ##
+git commit -am "some edits"; git push -u origin master
 ```
 
 <div align="right">[Back to Table of Contents]()</div>
