--- a/vignettes/03_longevityTools_Overview/longevityTools.Rmd
+++ b/vignettes/03_longevityTools_Overview/longevityTools.Rmd
@@ -95,6 +95,16 @@ git commit -am "some edits"; git push -u origin master
 
 <div align="right">[Back to Table of Contents]()</div>
 
+## Building and checking package
+
+```{sh package_build, eval=FALSE}
+R CMD build longevityTools # Run from parent directory of longevityTools directory
+R CMD check longevityTools_1.0.3.tar.gz
+install.package("longevityTools_1.0.3.tar.gz", repos=NULL, type="source")
+```
+
+<div align="right">[Back to Table of Contents]()</div>
+
 # Overview of object clases, methods and functions
 
 To be continued... [@Lamb2006-uv; @Peters2015-fc; @Sood2015-pb].
